[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Main/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Menus/Characters/CharacterMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/LoginAndRegister.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/ParallaxBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Elements/MouseCamera2D.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="MouseCamera2D" parent="." instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="LoginAndRegister" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="CharacterMenu" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false

[connection signal="login_pressed" from="CanvasLayer/LoginAndRegister" to="." method="_on_LoginAndRegister_login_pressed"]
[connection signal="register_pressed" from="CanvasLayer/LoginAndRegister" to="." method="_on_LoginAndRegister_register_pressed"]
[connection signal="character_deletion_requested" from="CanvasLayer/CharacterMenu" to="." method="_on_CharacterMenu_character_deletion_requested"]
[connection signal="character_selected" from="CanvasLayer/CharacterMenu" to="." method="_on_CharacterMenu_character_selected"]
[connection signal="go_back_requested" from="CanvasLayer/CharacterMenu" to="." method="_on_CharacterMenu_go_back_requested"]
[connection signal="new_character_requested" from="CanvasLayer/CharacterMenu" to="." method="_on_CharacterMenu_new_character_requested"]
